インテンド整形

--- a/index.html
+++ b/index.html
@@ -8,17 +8,11 @@
     <!-- サイトのタイトル -->
     <title>capello</title>
     <!-- サイトの説明文 -->
-    <meta
-      name="description"
-      content="Hair makes life fun."
-    />
+    <meta name="description" content="Hair makes life fun." />
     <!-- ページのタイトル -->
     <meta property="og:title" content="capello" />
     <!-- ページの説明文 -->
-    <meta
-      property="og:description"
-      content="Hair makes life fun."
-    />
+    <meta property="og:description" content="Hair makes life fun." />
     <!-- ページのURL -->
     <meta property="og:url" content="本番環境の絶対パスを入れる" />
     <!-- サムネイル画像のURL 1200*630-->
@@ -110,18 +104,12 @@
             <picture>
               <source
                 media="(min-width:1009px)"
-                srcset="
-                  /img/pc/fv-pc.webp    1x,
-                  /img/pc/fv-pc@2x.webp 2x
-                "
+                srcset="/img/pc/fv-pc.webp 1x, /img/pc/fv-pc@2x.webp 2x"
               />
               <img
                 loading="lazy"
                 src="img/sp/fv-sp.webp"
-                srcset="
-                  /img/sp/fv-sp.webp    1x,
-                  /img/sp/fv-sp@2x.webp 2x
-                "
+                srcset="/img/sp/fv-sp.webp 1x, /img/sp/fv-sp@2x.webp 2x"
                 alt="fv"
               />
             </picture>
@@ -384,7 +372,10 @@
                 <p class="p-index-product__text">
                   conse<span class="p-index-product__text-span01">ctetur</span>
                   adipiscing elit
-                  <span class="p-index-product__text-span01 p-index-product__text-span01--tab"><br class="p-index-product__text-br--tab">duis</span>
+                  <span
+                    class="p-index-product__text-span01 p-index-product__text-span01--tab"
+                    ><br class="p-index-product__text-br--tab" />duis</span
+                  >
                   tristique sollicitudin nibh sit amet
                   <span class="p-index-product__text-span01">commo</span
                   ><span class="p-index-product__text-span01">do</span> nulla
@@ -402,18 +393,12 @@
                 <picture>
                   <source
                     media="(min-width:1009px)"
-                    srcset="
-                      /img/pc/wax-pc.webp    1x,
-                      /img/pc/wax-pc@2x.webp 2x
-                    "
+                    srcset="/img/pc/wax-pc.webp 1x, /img/pc/wax-pc@2x.webp 2x"
                   />
                   <img
                     loading="lazy"
                     src="img/sp/wax-sp.webp"
-                    srcset="
-                      /img/sp/wax-sp.webp    1x,
-                      /img/sp/wax-sp@2x.webp 2x
-                    "
+                    srcset="/img/sp/wax-sp.webp 1x, /img/sp/wax-sp@2x.webp 2x"
                     alt="wax"
                   />
                 </picture>
@@ -437,7 +422,10 @@
                 <p class="p-index-product__text">
                   conse<span class="p-index-product__text-span01">ctetur</span>
                   adipiscing elit
-                  <span class="p-index-product__text-span01 p-index-product__text-span01--tab"><br class="p-index-product__text-br--tab">duis</span>
+                  <span
+                    class="p-index-product__text-span01 p-index-product__text-span01--tab"
+                    ><br class="p-index-product__text-br--tab" />duis</span
+                  >
                   tristique sollicitudin nibh sit amet
                   <span class="p-index-product__text-span01">commo</span
                   ><span class="p-index-product__text-span01">do</span> nulla
@@ -462,8 +450,26 @@
           <h2 class="c-title">ACCESS</h2>
           <div class="p-index-access__wrapper">
             <div class="p-index-access__flex-item01">
-              <iframe class="visible-pc" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d3952.514989961989!2d130.37649752816287!3d33.58828799291395!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sja!2sjp!4v1668694961801!5m2!1sja!2sjp" width="500" height="500" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-              <iframe class="visible-sp" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d3952.514989961989!2d130.37649752816287!3d33.58828799291395!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sja!2sjp!4v1668694961801!5m2!1sja!2sjp" width="345" height="345" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              <iframe
+                class="visible-pc"
+                src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d3952.514989961989!2d130.37649752816287!3d33.58828799291395!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sja!2sjp!4v1668694961801!5m2!1sja!2sjp"
+                width="500"
+                height="500"
+                style="border: 0"
+                allowfullscreen=""
+                loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"
+              ></iframe>
+              <iframe
+                class="visible-sp"
+                src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d3952.514989961989!2d130.37649752816287!3d33.58828799291395!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sja!2sjp!4v1668694961801!5m2!1sja!2sjp"
+                width="345"
+                height="345"
+                style="border: 0"
+                allowfullscreen=""
+                loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"
+              ></iframe>
             </div>
             <!-- /.p-index-access__flex-item01 -->
             <div class="p-index-access__flex-item02">
