--- a/index.html
+++ b/index.html
@@ -25,8 +25,6 @@
     <meta property="og:locale" content="ja_JP" />
     <!-- レガシーブラウザ用のfavicon.ico 32×32-->
     <link rel="icon" href="/img/favicon.ico" sizes="any" />
-    <!-- モダンブラウザ用のSVGアイコン（ライト・ダーク） -->
-    <link rel="icon" href="/img/icon.svg" type="image/svg+xml" />
     <!-- Appleデバイス用の180×180のPNGアイコン -->
     <link
       rel="apple-touch-icon"
@@ -48,12 +46,12 @@
   </head>
   <body>
     <!-- l-header -->
-    <header class="l-header js-l-header">
+    <header class="l-header">
       <div class="l-header__wrapper">
         <h1 class="l-header__site-title">capello</h1>
         <!-- /.l-header__site-title -->
         <ul class="l-header__nav-lists">
-          <li class="l-header__nav-item"><a href="#">HOME</a></li>
+          <li class="l-header__nav-item"><a href="#!">HOME</a></li>
           <!-- /.l-header__nav-item -->
           <li class="l-header__nav-item"><a href="#concept">CONCEPT</a></li>
           <!-- /.l-header__nav-item -->
@@ -74,7 +72,7 @@
         <nav class="l-header__burger-menu js-l-header__burger-menu">
           <ul id="menu">
             <li class="l-header__burger-menu-link">
-              <a href="#">HOME</a>
+              <a href="#!">HOME</a>
             </li>
             <li class="l-header__burger-menu-link">
               <a href="#concept">CONCEPT</a>
@@ -166,7 +164,7 @@
                 nostrud amet.
               </p>
               <!-- /.p-index-concept__text -->
-              <a href="#" class="c-button">check more</a>
+              <a href="#!" class="c-button">check more</a>
             </div>
             <!-- /.p-index-concept__flex-item01 -->
             <div class="p-index-concept__flex-item02">
@@ -383,7 +381,7 @@
                   <span class="p-index-product__text-span01">congue</span>
                 </p>
                 <!-- /.p-index-product__text -->
-                <a href="#" class="c-button">check more</a>
+                <a href="#!" class="c-button">check more</a>
               </div>
               <!-- /.p-index-product__content -->
             </div>
@@ -433,7 +431,7 @@
                   <span class="p-index-product__text-span01">congue</span>
                 </p>
                 <!-- /.p-index-product__text -->
-                <a href="#" class="c-button">check more</a>
+                <a href="#!" class="c-button">check more</a>
               </div>
               <!-- /.p-index-product__content -->
             </div>
@@ -556,12 +554,12 @@
     </main>
     <!-- main -->
 
-    <!-- l-index-footer -->
-    <footer class="l-index-footer">
-      <p class="l-index-footer__site-title">comp hair</p>
-      <!-- /.l-index-footer__site-title -->
+    <!-- l-footer -->
+    <footer class="l-footer">
+      <p class="l-footer__site-title">comp hair</p>
+      <!-- /.l-footer__site-title -->
     </footer>
-    <!-- l-index-footer -->
+    <!-- l-footer -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="/js/script.js"></script>
   </body>
