footer タイトル修正

--- a/index.html
+++ b/index.html
@@ -556,7 +556,7 @@
 
     <!-- l-footer -->
     <footer class="l-footer">
-      <p class="l-footer__site-title">comp hair</p>
+      <p class="l-footer__site-title">capello</p>
       <!-- /.l-footer__site-title -->
     </footer>
     <!-- l-footer -->
