burger ul class修正

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <span></span>
         </div>
         <nav class="l-header__burger-menu js-l-header__burger-menu">
-          <ul class="l-header__burger-lists">
+          <ul class="l-header__burger-menu-lists">
             <li class="l-header__burger-menu-link">
               <a href="#!">HOME</a>
             </li>
