タイトル修正

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <!--検索エンジンの対象外にする-->
     <meta name="robots" content="noindex,nofollow" />
     <!-- サイトのタイトル -->
-    <title>capello</title>
+    <title>comphair</title>
     <!-- サイトの説明文 -->
     <meta name="description" content="Hair makes life fun." />
     <!-- ページのタイトル -->
-    <meta property="og:title" content="capello" />
+    <meta property="og:title" content="comphair" />
     <!-- ページの説明文 -->
     <meta property="og:description" content="Hair makes life fun." />
     <!-- ページのURL -->
@@ -18,7 +18,7 @@
     <!-- サムネイル画像のURL 1200*630-->
     <meta property="og:image" content="/img/thumbnail.png" />
     <!-- サイトの名前 -->
-    <meta property="og:site_name" content="capello" />
+    <meta property="og:site_name" content="comphair" />
     <!-- サイトの種類 -->
     <meta property="og:type" content="website" />
     <!-- サイトの言語情報 -->
@@ -48,7 +48,7 @@
     <!-- l-header -->
     <header class="l-header">
       <div class="l-header__wrapper">
-        <h1 class="l-header__site-title">capello</h1>
+        <h1 class="l-header__site-title">comphair</h1>
         <!-- /.l-header__site-title -->
         <ul class="l-header__nav-lists">
           <li class="l-header__nav-item"><a href="#!">HOME</a></li>
@@ -482,7 +482,7 @@
             <!-- /.p-index-access__flex-item01 -->
             <div class="p-index-access__flex-item02">
               <div class="p-index-access__content">
-                <h3 class="p-index-access__heading">capello</h3>
+                <h3 class="p-index-access__heading">comphair</h3>
                 <!-- /.p-index-access__heading -->
                 <p class="p-index-access__text">
                   2972 Westheimer Rd. Santa Ana, Ill<span
@@ -564,7 +564,7 @@
 
     <!-- l-footer -->
     <footer class="l-footer">
-      <p class="l-footer__site-title">capello</p>
+      <p class="l-footer__site-title">comphair</p>
       <!-- /.l-footer__site-title -->
     </footer>
     <!-- l-footer -->
